# stand

./: .gitignore  Dockerfile  LICENSE  README.md  dataset_statistics.py  requirements.in  requirements.txt  setup.py
configs/: stand_large_test.yaml  stand_large_train.yaml  stand_medium_test.yaml  stand_medium_train.yaml  stand_small_test.yaml  stand_small_train.yaml
solvers/: .clang-tidy  CMakeLists.txt
solvers/benchmark/: .petscrc  CMakeLists.txt  main.cpp
solvers/include/solvers/: CuSparseSolver.hpp  PetscSolver.hpp  Solver.hpp  SparseSystem.hpp  SuiteSparseSolver.hpp  SuperLUSolver.hpp  ViennaCLSolver.hpp
solvers/libs/cnpy/: CMakeLists.txt  cnpy.cpp  cnpy.h
solvers/src/: CMakeLists.txt
solvers/src/solvers/: CuSparseSolver.cpp  PetscSolver.cpp  SparseSystem.cpp  SuiteSparseSolver.cpp  SuperLUSolver.cpp  ViennaCLSolver.cu
solvers/test/: CMakeLists.txt  main.cpp
solvers/test/solvers/: CuSparseSolverTest.cpp  PetscSolverTest.cpp  SolverTest.cpp  SparseSystemTest.cpp  SuiteSparseSolverTest.cpp  SuperLUSolverTest.cpp  ViennaCLSolverTest.cu
stand/: __init__.py  __main__.py  beam.py  frame.py  frame_structure.py  random_value.py  static_analysis_generator.py  static_analysis_problem.py
